feat(dashboard): plan smarter portal searches